@@ -160,6 +160,9 @@ Duration to keep filenames on screen (>= 2.0).
 \fB\-\-file\-extensions\fR
 Show filename extensions only.
 .TP
+\fB\-\-file\-extension\-fallback\fR
+Use filename as extension if the extension is missing or empty.
+.TP
 \fB\-\-file\-filter REGEX\fR
 Filter out file paths matching the specified regular expression.
 .TP
